--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
+    <link rel="stylesheet" href ="css/style.css">
 
     <!-- jQuery from CDN -->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
+  <script src="js/app.js"></script>
 
     <title>Tic Tac Toe</title>
   </head>
+  <!-- begining of what will appear on screen -->
+
   <body>
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h1>Tic Tac Toe</h1>
+          <h1>Tic Tac Flow </h1>
           <hr>
         </div>
       </div>
+<!-- begining of tic tac toe box -->
       <div class="row">
 
         <!-- a column represents our game board -->
@@ -34,16 +40,31 @@
 
           <!-- you can put rows inside of columns! -->
           <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
-          <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-          </div>
+              <div class="row1">
+                <div id="bloc11" class="col-xs-4 box"></div>
+                <div id="bloc12" class="col-xs-4 box"></div>
+                <div id="bloc13" class="col-xs-4 box"></div>
+              </div>
+
+              <div class="row2">
+                <div id="bloc21" class="col-xs-4 box"></div>
+                <div id="bloc22" class="col-xs-4 box"></div>
+                <div id="bloc23" class="col-xs-4 box"></div>
 
 
+              <div class="row3">
+                <div id="bloc31" class="col-xs-4 box"></div>
+                <div id="bloc32" class="col-xs-4 box"></div>
+                <div id="bloc33" class="col-xs-4 box"></div>
+              </div>
 
         </div>
       </div>
     </div>
-  </body>
+    <br>
+    <br>
+    <br>
+    <div class="row text-center">
+    <button id="button" class="btn btn-primary">Reset Board</button>
+</div>
 </html>
